atualização do de rotas e do swegger
