# src/swagger.json
@@ -51,7 +51,21 @@
                     "description" : "Id para a busca do documento",
                     "required" : true 
                 }],
-                "security" : [{ "bearerAuth" : [] }]
+                "security" : [{ "bearerAuth" : [] }],
+                "response" : {
+                    "500" : {
+                        "description" : "erro description"
+                    },
+                    "400" : {
+                        "description" : "Documento nao encontrado"
+                    },
+                    "401" : {
+                        "description" :  "Não autorizado"
+                    },
+                    "200" : {
+                        "description" : "Documento excluido com sucesso"
+                    }
+                }
             }
         },
         "/documents/{documentId}/prepare-signature" : {
@@ -77,7 +91,15 @@
                         "description" : "Documento não encontrado"
                     },
                     "200" : {
-                        "description" : "OK"
+                        "description" : "OK",
+                        "content" : {
+                            "application/html" : {
+                                "schema": {
+                                    "type": "string",
+                                    "format": "binary"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -124,12 +146,6 @@
                 "description" : "O PDF é enviado, dando inicio ao processo",
                 "tags" : ["Documents"],
                 "security" : [{ "bearerAuth" : [] }],
-                "parameters" : [{
-                    "name" : "documentId",
-                    "in" : "path",
-                    "description" : "Id para a busca do documento",
-                    "required" : true 
-                }],
                 "requestBody" : {
                     "content" : {
                         "application/pdf" : {
@@ -141,6 +157,9 @@
                     }
                 },
                 "responses" : {
+                    "500" : {
+                        "description" : "erro description"
+                    },
                     "401" : {
                         "description" :  "Não autorizado"
                     },
@@ -148,12 +167,21 @@
                         "description" : "OK",
                         "content" : {
                             "application/json" : {
-                                "documentId": {
-                                    "type" : "number",
-                                    "format" : "int"
-                                },
-                                "status": {
-                                    "type" : "string"
+                                "schema" : {
+                                    "type" : "object",
+                                    "properties" : {
+                                        "documentId": {
+                                        "type" : "number",
+                                        "format" : "int"
+                                        },
+                                        "status": {
+                                            "type" : "string"
+                                        }
+                                    },
+                                    "example" : {
+                                        "documentId" : "1746582479887",
+                                        "status" : "uploaded"
+                                    }
                                 }
                             }
                         }
@@ -163,7 +191,7 @@
         },
         "/documents/{documentId}/signers" : {
             "post" : {
-                "summary" : "Adicionar Assinates",
+                "summary" : "Adicionar Assinantes",
                 "description" : "Adicionar aqueles que devem assinar o documento",
                 "tags" : ["Signature"],
                 "security" : [{ "bearerAuth" : [] }],
@@ -209,7 +237,7 @@
         },
         "/documents/{documentId}/sign" : {
             "post" : {
-                "summary" : "Assinar",
+                "summary" : "Assinar Documento",
                 "description" : "O usuario adicionado no final '/signers' assina o documento",
                 "tags" : ["Signature"],
                 "security" : [{ "bearerAuth" : [] }],
@@ -240,7 +268,8 @@
                         "type": "string"
                     },
                     "email" : {
-                        "type" : "string"
+                        "type" : "string",
+                        "format" : "email"
                     },
                     "authcode" : {
                         "type" : "string"
@@ -249,6 +278,12 @@
                         "type" : "number",
                         "format" : "int"
                     }
+                },
+                "example" : {
+                    "name" : "Fulano Beltrano",
+                    "email" : "user@example.com",
+                    "authcode" : "e1a8t9",
+                    "order" : 1
                 }
             },
             "doc" : {
@@ -275,6 +310,14 @@
                             }
                         } 
                     }
+                },
+                "example" : {
+                    "documentId" : "1746582479887",
+                    "status" : "in_progress",
+                    "signer" : [{
+                        "email" : "user@example.com",
+                        "status" : "pending"
+                    }]
                 }
             },
             "field" : {
